An attempt to fix the IE8 overflow non appearance bug

--- a/methodbox/public/stylesheets/full_scroll_table.css
+++ b/methodbox/public/stylesheets/full_scroll_table.css
@@ -115,7 +115,7 @@ html>body tbody.scrollContent {
 /* make TD elements pretty. Provide alternating classes for striping the table */
 /* http://www.alistapart.com/articles/zebratables/                             */
 tbody.scrollContent td, tbody.scrollContent tr.normalRow td {
-	background: #FFF;
+	background: #DFE9F4;
 	border-bottom: none;
 	border-left: none;
 	border-right: 1px solid #CCC;
